Fix the Portfolio Div's Spacing

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ li a:hover {
 
 .Portfolio {
 	background-color: #43AADD;
+	padding-bottom: 50px;
 }
 .NavRight {
 	color: #EBEBEB;
